2009-01-14  Jon Nettleton  <jon.nettletno@gmail.com>

	* src/via_accel.c: (viaFlushPCI):

	remove the check for VIA_3D_ENG_BUSY in the idle loop.
	This causes xorg to chew a bit more cpu with XAA enabled,
	and it causes the entire X server to dump if EXA is enabled.
	I should investigate further, but for now I will just remove
	it.

2009-01-14  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaFlushPCI):

	Oops forgot to change registers for the vx800 chipset
	when waiting for Idle in the engines.  I also added
	back in waiting for the 3d engine to be idle.  I am
	not sure if this was removed for a reason.

2009-01-07  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_bios.h:
	* src/via_crtc.c: (via_xf86crtc_resize), (ViaPreInitCRTCConfig):
	* src/via_driver.c: (VIAPreInit):

	Temporary hack to fix a bug with newer Xorg and DRI
	that crashes if CRTC is not setup.  I am adding this
	because I am working on this part of the code anyways
	so it won't get lost in bit rot.

2009-01-06  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_mode.c: (ViaModesMonitorFixup), (ViaModesAttachHelper):

	Make sure that the monitor settings will handle our
	internal Modes set for TV out and LCD Panels.

2009-01-05  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_cursor.c: (viaHWCursorInit), (viaLoadCursorImage):

	A couple more tweaks to fix mono hardware cursor on older
	chipsets.

2009-01-05  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_cursor.c: (viaHWCursorInit), (viaUseHWCursorARGB),
	(viaUseHWCursor):
	* src/via_driver.c: (VIAScreenInit):

	Missed a couple of changes for the chipset specific
	cursors.  Moved chipset detection to HWInit.  Removed
	some extraneous debugging.

2009-01-04  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via.h:
	* src/via_accel.c: (viaInitialize2DEngine):
	* src/via_crtc.c: (ViaFirstCRTCSetMode), (ViaSecondCRTCSetMode):
	* src/via_driver.c: (ViaMMIOEnable), (ViaMMIODisable),
	(VIAWriteMode):